fixed title alignment

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ flex-direction:column ;
 
 
 .sectiontitle{
-  text-align: center;
+  /* text-align: center; */
   position: relative;
   bottom: 0px;}
 
